--- a/week3/index.html
+++ b/week3/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <title>About Me</title>
-    <img src="C:\Users\kylaa\Downloads\PICTURES\pickyla1.JPG" alt="Kyla's Picture" width=300
+    <img src="pickyla1.JPG" alt="Kyla's Picture" width=300
             height=215>
 </head>
 
