--- a/week3/index.html
+++ b/week3/index.html
@@ -31,6 +31,8 @@
             overflow: hidden;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 			float:left;
+			text-indent:50px;
+			margin-top:150px;
         }
 
         .info-box {
@@ -42,50 +44,24 @@
         }
 		
 		.intro-name1 {
-			text-align: left;
-			line-height:normal;
-			color:#323232;
-			float:left;
-			font-size: 19px;
-		}
-		
-		.intro-name2 {
-			text-align: left;
-			line-height:normal;
-			color:#323232;
-			float:left;
-			font-size: 24px;
-		
-		}
-		
-		.intro-name3 {
-			text-align: left;
-			line-height:normal;
-			color:#323232;
-			float:left;
-			font-size: 22px;
-		}
-		
-	
-		.intro {
-			align-items: stretch;
-		}
-		
-		.Hob-box, .skill-box {
             text-align: left;
-			
+            line-height: normal;
+            color: #323232;
+            font-size: 40px;
+			float:right;
         }
 
-		
-		.interests-container {
+        .intro {
             display: flex;
+            align-items: center;
             justify-content: space-between;
+			max-width: 800px;
+            margin-top:100px;
+            background-color: #DDD0C8;
+			padding-right: 80px;
+            
         }
 
-        strong {
-            font-weight: bold;
-        }
-		
         .profile-image {
             width: 250px;
             height: 250px;
@@ -93,21 +69,73 @@
             margin: 20px;
             overflow: hidden;
 			float:left;
+			
         }
 
         .profile-image img {
             width: 100%;
             height: 100%;
             object-fit: cover;
-
+			
         }
 
-        .profile-name {
-            font-size: 24px;
+        .intro-text {
+            max-width: 800px;
+            margin: 20px;
+        }
+
+        .intro-text p {
+            margin: 0;
+        }
+
+
+		.interests-container {
+            max-width: 800px;
+            display: flex;
+            justify-content: space-evenly;
+            overflow: hidden;
+			margin-top:60px;
+        }
+
+        .Hob-box, .skill-box {
+            text-align: left;
+            overflow: hidden;
+            flex: 1;
+            margin: 30px;
+            padding: 20px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+        }
+
+        .Hob-box ul,
+        .skill-box ul {
+            padding: 10px;
+        }
+
+		.gal-box {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-around;
+			padding-top:5px;
+			margin-bottom:50px;
+        }
+
+        .gal-box img {
+            max-width: 200px;
+            margin: 10px;
+            border-radius: 5px;
+			box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+		
+		.gal-text {
+			text-align:center;
+			margin-top:50px;
+		}
+		
+        strong {
             font-weight: bold;
-            color: #A0006D;
-			margin: 20px;
         }
+		
+        
 
         ul {
             list-style-type:circle;
@@ -125,16 +153,13 @@
 
 <body>
 	<div class="intro">
-		<div class="profile-image">
-			<img src="pickyla1.JPG" alt="Kyla's Picture">
-		</div>
-		<div>
-			<p class="intro-name1">Hi there!</p>
-			<br>
-			<p class="intro-name2">I'm <strong>Kyla Amor Pantino</strong></p>
-			<br>
-			<p class="intro-name3"><strong>19, IT student in APC</strong></p>
-		</div>
+            <div class="profile-image">
+                <img src="pickyla1.JPG" alt="Kyla's Picture">
+            </div>
+            <div class="intro-text">
+                <p class="intro-name1">Hi there!<br>I'm <strong>Kyla Amor Pantino</strong><br><strong>19, IT student in APC</strong></p>
+            </div>
+        </div>
 	</div>
 	
 
@@ -151,9 +176,10 @@
 	<div class="interests-container">
         <div class="Hob-box">
             <h2>Hobbies & Interests</h2>
+			
             <ul>
                 <li>Playing Genshin Impact</li>
-                <li>Playing different sports such as volleyball and badminton, and biking</li>
+                <li>Playing different sports such as volleyball <br> and badminton, and biking</li>
                 <li>Binge-watching series and movies</li>
                 <li>Coffee shop hopping</li>
             </ul>
@@ -161,6 +187,7 @@
 
         <div class="skill-box">
             <h2>IT Experience</h2>
+			
             <ul>
                 <li>Basic Python</li>
                 <li>Java</li>
@@ -171,8 +198,16 @@
             </ul>
         </div>
     </div>
+	
+	<h1 class="gal-text">Gallery</h1>
+	
 	<div class="gal-box">
-		<h1>Gallery</h1>
+		<img src="gal1.JPG" alt="Kyla's Picture1" class="pics">
+		<img src="gal2.JPG" alt="Kyla's Picture2" class="pics">
+		<img src="gal4.JPG" alt="Kyla's Picture4" class="pics">
+		<img src="gal3.JPG" alt="Kyla's Picture3" class="pics">
+		
+	</div>
 
 </body>
 
